service.yaml
apiVersion: v1
kind: Service
metadata:
  name: instant-search-demo
spec:
  selector:
    app: instant-search-demo
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
